--- a/player/Player.csproj
+++ b/player/Player.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{ECB875ED-5A2A-43A3-9A97-68AE6C642574}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Icfpc2011</RootNamespace>
-    <AssemblyName>icfpc2011</AssemblyName>
+    <RootNamespace>Contest</RootNamespace>
+    <AssemblyName>player</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -48,8 +48,11 @@
   <ItemGroup>
     <Compile Include="Functions.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="World.cs" />
     <Compile Include="WorldTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
