--- a/player/Player.csproj
+++ b/player/Player.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
+    <Compile Include="HealerTests.cs" />
     <Compile Include="Primitives.cs" />
     <Compile Include="ZombieTests.cs" />
     <Compile Include="ThePlan.cs" />
