--- a/player/Player.csproj
+++ b/player/Player.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="Form.cs" />
     <Compile Include="HealerTests.cs" />
     <Compile Include="Primitives.cs" />
     <Compile Include="ZombieTests.cs" />
